[project]
name = "anylogic-export"
version = "0.1.0"
description = "Pre-commit hook for exporting AnyLogic standalone models to run in continuous integration."
authors = [{ name = "Chris Schopp", email = "cschopp@simwell.io" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anylogic-export",
    "typer>=0.20.0",
    "watchfiles>=1.0.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.11.8",
    "pre-commit>=4.2.0",
]

[tool.uv.sources]
anylogic-export = { workspace = true }

[project.scripts]
anylogic-export = "anylogic_export.export:run"

[tool.pytest.ini_options]
markers = ["local: requires an installation of AnyLogic and/or a license and cannot run in CI"]
testpaths = ["."]

[tool.setuptools.packages.find]
include = ["anylogic_export"]

